Scaffold for service and web_sys implementation

--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -69,6 +69,7 @@ features = [
   "FileList",
   "FileReader",
   "FocusEvent",
+  "Geolocation",
   "Headers",
   "HtmlElement",
   "HtmlButtonElement",
@@ -83,6 +84,9 @@ features = [
   "Node",
   "ObserverCallback",
   "PointerEvent",
+  "Position",
+  "PositionError",
+  "PositionOptions",
   "ProgressEvent",
   "ReferrerPolicy",
   "Request",
